--- a/index.html
+++ b/index.html
@@ -47,64 +47,61 @@
         <!-- <div class="container"> -->
         <ul>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                    <ion-icon name="terminal-outline"></ion-icon>Tools
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="color-palette-outline"></ion-icon>Colors
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="bookmarks-outline"></ion-icon>More Useful
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="book-outline"></ion-icon>Reading
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="chatbubbles-outline"></ion-icon>Communities - Blogs
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="logo-html5"></ion-icon>HTML
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="logo-css3"></ion-icon>CSS
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="images-outline"></ion-icon>Images - Videos
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="information-outline"></ion-icon>Problem-Solving - Challenges
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="paper-plane-outline"></ion-icon>Icons
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="newspaper-outline"></ion-icon>Templtes
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="document-text-outline"></ion-icon>Typography
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="code-outline"></ion-icon>Tools
+                <ion-icon name="bulb-outline"></ion-icon>Learning
                 </a></li>
         </ul>
         <!-- </div> -->
@@ -115,7 +112,7 @@
             <div class="container">
                 <section class="group group-tools" id="tools">
                     <header class="group-header">
-                        <ion-icon name="code-outline"></ion-icon>
+                        <ion-icon name="terminal-outline"></ion-icon>
                         <h2>Dev Tools</h2>
                     </header>
                     <article class="group-cards">
