--- a/index.html
+++ b/index.html
@@ -122,19 +122,18 @@
                             <h3>Visual Studio Code</h3>
                             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
                                 modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://code.visualstudio.com/" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
                         </div>
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
-                            <h3>Visual Studio Code</h3>
-                            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
-                                modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/codepen.png" alt="VS-Code"></div>
+                            <h3>Codepen</h3>
+                            <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and JavaScript code snippets.</p>
+                            <a href="codepen.io" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
                         </div>
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/" alt="VS-Code"></div>
                             <h3>Visual Studio Code</h3>
                             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
                                 modern web and cloud applications.</p>
