added dev tools

--- a/index.html
+++ b/index.html
@@ -110,59 +110,123 @@
     <main>
         <article>
             <div class="container">
+
+                <!--  --------- Section ---------- -->
                 <section class="group group-tools" id="tools">
+                    <!-- ---- section-header ------ -->
                     <header class="group-header">
                         <ion-icon name="terminal-outline"></ion-icon>
                         <h2>Dev Tools</h2>
                     </header>
+                    <!-- ---------- section-cards ------ -->
                     <article class="group-cards">
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/vscode.jpg" alt="VS-Code"></div>
                             <h3>Visual Studio Code</h3>
                             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
                                 modern web and cloud applications.</p>
-                            <a href="https://code.visualstudio.com/" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://code.visualstudio.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/atom.png" alt="VS-Code"></div>
+                            <h3>Atom</h3>
+                            <p>Yet Another Code Editor. <br><br><br> </p>
+                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/sublime.png" alt="VS-Code"></div>
+                            <h3>Sublime Text</h3>
+                            <p>Yet Another Code Editor. <br><br><br> </p>
+                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/brackets.jpg" alt="VS-Code"></div>
+                            <h3>Brackets</h3>
+                            <p>Yet Another Code Editor. <br><br><br> </p>
+                            <a href="https://brackets.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/codepen.png" alt="VS-Code"></div>
                             <h3>Codepen</h3>
                             <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and JavaScript code snippets.</p>
-                            <a href="codepen.io" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                            <a href="codepen.io" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="VS-Code"></div>
-                            <h3>Visual Studio Code</h3>
-                            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
-                                modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/emmet.svg" alt="VS-Code"></div>
+                            <h3>Emmet</h3>
+                            <p>Emmet is a plugin for many popular text editors which greatly improves HTML & CSS workflow.</p>
+                            <a href="https://emmet.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
-                            <h3>Visual Studio Code</h3>
-                            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
-                                modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/git.png" alt="VS-Code"></div>
+                            <h3>Git</h3>
+                            <p>Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
+                            <a href="https://git-scm.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
-                            <h3>Visual Studio Code</h3>
-                            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
-                                modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/github.png" alt="VS-Code"></div>
+                            <h3>GitHub</h3>
+                            <p>GitHub, Inc. is a subsidiary of Microsoft which provides hosting for software development and version control using Git.</p>
+                            <a href="github.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/vscode.png" alt="VS-Code"></div>
-                            <h3>Visual Studio Code</h3>
-                            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
-                                modern web and cloud applications.</p>
-                            <a href="" class="visit-btn">Visit Website <ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/gitlab.png" alt="VS-Code"></div>
+                            <h3>GitLab</h3>
+                            <p>GitLab is an open source end-to-end software development platform with built-in version control, issue tracking, code review, CI/CD, and more</p>
+                            <a href="https://about.gitlab.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
                         </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/figma.png" alt="VS-Code"></div>
+                            <h3>Figma</h3>
+                            <p>Figma is a vector graphics editor and prototyping tool which is primarily web-based, with additional offline features enabled by desktop applications for macOS and Windows.</p>
+                            <a href="www.figma.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/insomnia.jpg" alt="VS-Code"></div>
+                            <h3>Insomnia</h3>
+                            <p>Insomnia is a great application to help you work with APIs as a developer. It's really easy to customize to suit your own workflows and preferences.</p>
+                            <a href="https://insomnia.rest/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/codesandbox.png" alt="VS-Code"></div>
+                            <h3>CodeSandbox</h3>
+                            <p>CodeSandbox is an amazing tool to help you prototype ideas with code. Quickly spin up new sandboxes with pre-configured templates and easily share your code with others.</p>
+                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/hyper.png" alt="VS-Code"></div>
+                            <h3>Hyper</h3>
+                            <p>Hyper is a beautiful and fast Electron-based terminal created by the team at Vercel. It's fully extensible and easy to customize to help speed up your workflow.</p>
+                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+
+
                     </article>
                 </section>
                 <section class="group group-" id="">
