--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/resources/css/style.css">
     <!-- ---- Lato Font ---- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet"
 
     <!-- ------ favicon ------ -->
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
@@ -39,9 +39,14 @@
     <!-- ----- hero ------ -->
     <section class="banner">
         <div class="content">
-            <h1>Resource List</h1>
-            <h3>A curated list of resources for Developers and designers.</h3>
+            <h1>Resource Mark</h1>
+            <h3>A curated list of resources for Designing and Development.</h3>
         </div>
+        <!-- <form action="" class="sumbit-form">
+            <input type="text" name="resource-name" id="" placeholder="Resource Name">
+            <input type="text" name="resource-url" id="" placeholder="Resource URL">
+            <a href="" class="submit-btn visit-btn">Submit</a>
+        </form> -->
     </section>
     <nav class="group-nav">
         <!-- <div class="container"> -->
@@ -50,58 +55,58 @@
                     <ion-icon name="terminal-outline"></ion-icon>Tools
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
+                    <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="color-palette-outline"></ion-icon>Colors
+                    <ion-icon name="color-palette-outline"></ion-icon>Colors
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="bulb-outline"></ion-icon>Inspiration
+                    <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="bookmarks-outline"></ion-icon>More Useful
+                    <ion-icon name="bookmarks-outline"></ion-icon>More Useful
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="book-outline"></ion-icon>Reading
+                    <ion-icon name="book-outline"></ion-icon>Reading
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="chatbubbles-outline"></ion-icon>Communities - Blogs
+                    <ion-icon name="chatbubbles-outline"></ion-icon>Communities - Blogs
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="logo-html5"></ion-icon>HTML
+                    <ion-icon name="logo-html5"></ion-icon>HTML
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="logo-css3"></ion-icon>CSS
+                    <ion-icon name="logo-css3"></ion-icon>CSS
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
+                    <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="images-outline"></ion-icon>Images - Videos
+                    <ion-icon name="images-outline"></ion-icon>Images - Videos
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
+                    <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
+                    <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="information-outline"></ion-icon>Problem-Solving - Challenges
+                    <ion-icon name="information-outline"></ion-icon>Problem-Solving - Challenges
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="paper-plane-outline"></ion-icon>Icons
+                    <ion-icon name="paper-plane-outline"></ion-icon>Icons
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="newspaper-outline"></ion-icon>Templtes
+                    <ion-icon name="newspaper-outline"></ion-icon>Templtes
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="document-text-outline"></ion-icon>Typography
+                    <ion-icon name="document-text-outline"></ion-icon>Typography
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
+                    <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
                 </a></li>
             <li><a href="" class="group-nav-link">
-                <ion-icon name="bulb-outline"></ion-icon>Learning
+                    <ion-icon name="bulb-outline"></ion-icon>Learning
                 </a></li>
         </ul>
         <!-- </div> -->
@@ -127,7 +132,8 @@
                             <h3>Visual Studio Code</h3>
                             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging
                                 modern web and cloud applications.</p>
-                            <a href="https://code.visualstudio.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://code.visualstudio.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
@@ -135,7 +141,8 @@
                                 <img src="/resources/icons/atom.png" alt="VS-Code"></div>
                             <h3>Atom</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
-                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
@@ -143,7 +150,8 @@
                                 <img src="/resources/icons/sublime.png" alt="VS-Code"></div>
                             <h3>Sublime Text</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
-                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
@@ -151,79 +159,98 @@
                                 <img src="/resources/icons/brackets.jpg" alt="VS-Code"></div>
                             <h3>Brackets</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
-                            <a href="https://brackets.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <a href="https://brackets.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/codepen.png" alt="VS-Code"></div>
                             <h3>Codepen</h3>
-                            <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and JavaScript code snippets.</p>
-                            <a href="codepen.io" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and
+                                JavaScript code snippets.</p>
+                            <a href="codepen.io" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
+                                </ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/emmet.svg" alt="VS-Code"></div>
                             <h3>Emmet</h3>
-                            <p>Emmet is a plugin for many popular text editors which greatly improves HTML & CSS workflow.</p>
-                            <a href="https://emmet.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Emmet is a plugin for many popular text editors which greatly improves HTML & CSS
+                                workflow.</p>
+                            <a href="https://emmet.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/git.png" alt="VS-Code"></div>
                             <h3>Git</h3>
-                            <p>Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
-                            <a href="https://git-scm.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Git is a free and open source distributed version control system designed to handle
+                                everything from small to very large projects with speed and efficiency.</p>
+                            <a href="https://git-scm.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/github.png" alt="VS-Code"></div>
                             <h3>GitHub</h3>
-                            <p>GitHub, Inc. is a subsidiary of Microsoft which provides hosting for software development and version control using Git.</p>
-                            <a href="github.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>GitHub, Inc. is a subsidiary of Microsoft which provides hosting for software development
+                                and version control using Git.</p>
+                            <a href="github.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
+                                </ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/gitlab.png" alt="VS-Code"></div>
                             <h3>GitLab</h3>
-                            <p>GitLab is an open source end-to-end software development platform with built-in version control, issue tracking, code review, CI/CD, and more</p>
-                            <a href="https://about.gitlab.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>GitLab is an open source end-to-end software development platform with built-in version
+                                control, issue tracking, code review, CI/CD, and more</p>
+                            <a href="https://about.gitlab.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/figma.png" alt="VS-Code"></div>
                             <h3>Figma</h3>
-                            <p>Figma is a vector graphics editor and prototyping tool which is primarily web-based, with additional offline features enabled by desktop applications for macOS and Windows.</p>
-                            <a href="www.figma.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Figma is a vector graphics editor and prototyping tool which is primarily web-based, with
+                                additional offline features enabled by desktop applications for macOS and Windows.</p>
+                            <a href="www.figma.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/insomnia.jpg" alt="VS-Code"></div>
                             <h3>Insomnia</h3>
-                            <p>Insomnia is a great application to help you work with APIs as a developer. It's really easy to customize to suit your own workflows and preferences.</p>
-                            <a href="https://insomnia.rest/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Insomnia is a great application to help you work with APIs as a developer. It's really
+                                easy to customize to suit your own workflows and preferences.</p>
+                            <a href="https://insomnia.rest/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/codesandbox.png" alt="VS-Code"></div>
                             <h3>CodeSandbox</h3>
-                            <p>CodeSandbox is an amazing tool to help you prototype ideas with code. Quickly spin up new sandboxes with pre-configured templates and easily share your code with others.</p>
-                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>CodeSandbox is an amazing tool to help you prototype ideas with code. Quickly spin up new
+                                sandboxes with pre-configured templates and easily share your code with others.</p>
+                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
                                 <img src="/resources/icons/hyper.png" alt="VS-Code"></div>
                             <h3>Hyper</h3>
-                            <p>Hyper is a beautiful and fast Electron-based terminal created by the team at Vercel. It's fully extensible and easy to customize to help speed up your workflow.</p>
-                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Hyper is a beautiful and fast Electron-based terminal created by the team at Vercel. It's
+                                fully extensible and easy to customize to help speed up your workflow.</p>
+                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
 
 
