--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <div class="logo">
                     <img src="/resources/images/logo.png" alt="logo">
                 </div>
-                <!-- <div class="nav-info">
-                    <div class="nav-img-box"><img src="/resources/images/nav-img.jpg" alt=""></div>
-                    <h3>Abdullah Sajjad</h3>
-                </div> -->
             </nav>
         </div>
     </header>
+    <a href="#category-nav">
+    <div class="top-btn">
+        <ion-icon name="arrow-up-circle-outline"></ion-icon>
+    </div></a>
     <!-- ----- hero ------ -->
     <section class="banner">
         <div class="content">
@@ -45,10 +45,10 @@
         <!-- <form action="" class="sumbit-form">
             <input type="text" name="resource-name" id="" placeholder="Resource Name">
             <input type="text" name="resource-url" id="" placeholder="Resource URL">
-            <a href="" class="submit-btn visit-btn">Submit</a>
+            <button type="submit">Submit</button>
         </form> -->
     </section>
-    <nav class="group-nav">
+    <nav class="group-nav" id="category-nav">
         <!-- <div class="container"> -->
         <ul>
             <li><a href="" class="group-nav-link">
