footer,top-btn added

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
 
                     </article>
                 </section>
-                <section class="group group-" id="">
-                </section>
+                <section class="group group-" id=""></section>
+                <!-- <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
@@ -284,12 +284,21 @@
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
-                <section class="group group-" id=""></section>
-                <section class="group group-" id=""></section>
+                <section class="group group-" id=""></section> -->
             </div>
         </article>
     </main>
-
+    <footer class="container">
+        <div class="footer--text">
+            <p>Designed and Developed with &hearts; by <a href="#" class="footer-link">Abdullah Sajjad</a></p>
+        </div>
+        <div class="footer--social-links">
+            <a href="https://www.facebook.com/profile.php?id=100047766791619"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="https://github.com/Abdullah-webdev/"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://twitter.com/NoName17228303"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="https://codepen.io/abdullah-webdev/"><ion-icon name="logo-codepen"></ion-icon></a>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
